k8s-experiment/services.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP #NodePort/ClusterIP/LoadBalancer/ExternalName
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
