k8s-experiment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-web-ig
spec:
  rules:
    - host: traefik.example.internal
      http:
        paths:
          - path: /
            pathType: Exact  
            backend:
              service:
                name:  nginx-service
                port:
                  number: 80
